<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_24"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_drawer_settings_24"
            android:title="@string/theme_mode" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_drawer_trash_24"
            android:title="@string/menu_trash" />
        <item
            android:id="@+id/nav_cloud"
            android:icon="@drawable/ic_cloud_24"
            android:title="@string/menu_cloud_storage" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_lock_24"
            android:title="@string/menu_security" />
        <item
            android:id="@+id/nav_clear_cache"
            android:icon="@drawable/ic_drawer_clear_cache_24"
            android:title="@string/clear_cache" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_drawer_info_24"
            android:title="@string/about" />
    </group>
</menu>
