<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_set_pin"
        android:textColor="@color/app_on_surface"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPinDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/security_pin_hint"
        android:importantForAutofill="no"
        android:imeOptions="actionNext"
        android:inputType="numberPassword"
        android:maxLength="12"
        android:textColor="@color/app_on_surface"
        android:textColorHint="@color/app_on_surface_secondary" />

    <EditText
        android:id="@+id/etPinDialogConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/security_pin_confirm_hint"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:maxLength="12"
        android:textColor="@color/app_on_surface"
        android:textColorHint="@color/app_on_surface_secondary" />
</LinearLayout>

